# opencv-learning

./: README.md
android/LearnOpenCV/: settings.gradle
android/LearnOpenCV/app/: build.gradle
android/LearnOpenCV/app/libs/: gpuimage.aar
android/LearnOpenCV/app/src/androidTest/java/com/guoxf/learnopencv/: ExampleInstrumentedTest.java
android/LearnOpenCV/app/src/main/: AndroidManifest.xml
android/LearnOpenCV/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/LearnOpenCV/app/src/main/java/com/guoxf/learnopencv/: MainActivity.java
android/LearnOpenCV/app/src/main/res/layout/: activity_main.xml
android/LearnOpenCV/app/src/main/res/values/: strings.xml
android/LearnOpenCV/app/src/test/java/com/guoxf/learnopencv/: ExampleUnitTest.java
android/LearnOpenCV/gradle/wrapper/: gradle-wrapper.properties
example/example1/: CMakeLists.txt  example1.cpp
example/example10/: CMakeLists.txt  example1.cpp
example/example11/: CMakeLists.txt  example1.cpp  example1.h
example/example12/: example1.cpp
example/example13/: example1.cpp
example/example14/: example1.cpp
example/example16/: CMakeLists.txt  example1.cpp
example/example2/: CMakeLists.txt  example1.cpp
example/example3/: CMakeLists.txt  CMakeSettings.json  example1.cpp
example/example4/: CMakeLists.txt  example1.cpp
example/example5/: .gitignore  CMakeLists.txt  example1.cpp
example/example6/: .gitignore  CMakeLists.txt  example1.cpp
example/example7/: CMakeLists.txt  example1.cpp
example/example8/: CMakeLists.txt  example1.cpp
example/example9/: CMakeLists.txt  example1.cpp
